Implementation of EventLogger, unique Id generation. Implementations of functionalities of subscriber. Implementation of Event Summary and filtering